# recpad-faces

./: compara_todos.py  face_processing.py  justified_table.sh  pyproject.toml  quadratico.py  run_all_experiments.sh  variante1.py  variante2.py  variante3.py  variante4.py
results/: recfaces_30.csv  recfaces_30_none.csv  recfaces_30_pca_1.csv  recfaces_30_pca_98.csv  recfaces_30_pca_98_box_cox.csv  recfaces_30_pca_full.csv  recfaces_30_scale_change.csv  recfaces_30_z_score.csv
tex/: main.tex
